--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.4.1",
+    "emailjs-com": "^3.2.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.4",
     "sass": "^1.42.1"
   },
   "devDependencies": {
