--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.4",
+    "react-icons": "^4.3.1",
     "sass": "^1.42.1"
   },
   "devDependencies": {
